<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_PythonHandshake" Id="{d711ca58-9cd3-4277-bd55-6269ec75b7af}">
    <Declaration><![CDATA[TYPE ST_PythonHandshake :
STRUCT
	bBusy					:BOOL;
	bDone					:BOOL;
	bError					:BOOL;
	sError					:STRING(255);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>