<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_RX_Python" Id="{0cca1d12-e3e0-4d88-bb7e-ab62112a1236}">
    <Declaration><![CDATA[TYPE ST_RX_Python :
STRUCT
	stAuditExport				:ST_PythonHandshake;
	stSendReport				:ST_PythonHandshake;
	stBatchReport				:ST_PythonHandshake;
	stDiskCapacity				:ST_PythonHandshake;
	sDiskFree					:STRING(255);
	sDisckCapacity				:STRING(255);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>